--- a/custom/index.html
+++ b/custom/index.html
@@ -20,7 +20,7 @@
                                 font-size: 20px;
                                 padding: 5px; 
                                 border-radius: 5px;
-                                display: hidden">00000000</div>
+                                visibility: hidden;">00000000</div>
 
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
@@ -433,7 +433,6 @@
 
         options.playbackConfig = playbackConfig;
         context.start(options);
-        checkFingerPrint()
 
         console.log("CUSTOM LOG:context started");
 
@@ -626,12 +625,12 @@
         }
 
         function showFingerprint(){
-            document.getElementById("fingerprint").display = block;
+            document.getElementById("fingerprint").visibility = visible;
             document.getElementById("fingerprint").innerHTML = wasAbi.getHouseholdId();
         }
 
         function hideFingerprint(){
-            document.getElementById("fingerprint").display = hidden;
+            document.getElementById("fingerprint").visibility = hidden;
         }
         
 
