--- a/custom/index.html
+++ b/custom/index.html
@@ -617,7 +617,7 @@
         }
 
         function checkFingerPrint(){
-            if(wasAbi.hasFingerprint){
+            if(wasAbi.getHasFingerprint()){
                 showFingerprint();
             }else{
                 hideFingerprint();
