--- a/custom/index.html
+++ b/custom/index.html
@@ -617,6 +617,7 @@
         }
 
         function checkFingerPrint(){
+            console.log("CUSTOM LOG: checkFingerPrint getHasFingerprint " + wasAbi.getHasFingerprint());
             if(wasAbi.getHasFingerprint()){
                 showFingerprint();
             }else{
