--- a/custom/index.html
+++ b/custom/index.html
@@ -617,8 +617,8 @@
         }
 
         function checkFingerPrint(){
-            console.log("CUSTOM LOG: checkFingerPrint getHasFingerprint " + wasAbi.getHasFingerprint());
-            if(wasAbi.getHasFingerprint()){
+            console.log("CUSTOM LOG: checkFingerPrint hasFingerprint " + wasAbi.hasFingerprint());
+            if(wasAbi.hasFingerprint()){
                 showFingerprint();
             }else{
                 hideFingerprint();
