--- a/custom/index.html
+++ b/custom/index.html
@@ -18,7 +18,7 @@
                                 margin-left: 5%; 
                                 margin-top: 5%; 
                                 font-size: 20px;
-                                padding: 5px 15px 5px 15px; 
+                                padding: 5px 20px 5px 20px; 
                                 border-radius: 5px;
                                 visibility: hidden;">00000000</div>
 
@@ -37,7 +37,9 @@
         var senderId = "";
         var startTime = 0;
         var sessionManagerTimer = null;
-        var markPositionTimer;
+        var markPositionTimer = null;
+        var showFingerPrintTimeout = null;
+        var hideFingerPrintTimeout = null;
         var secondaryQaaLanguage = "eng";
         var notQaaLanguage = "spa";
 
@@ -617,7 +619,10 @@
         }
 
         function checkFingerPrint(){
-            console.log("CUSTOM LOG: checkFingerPrint hasFingerprint " + wasAbi.hasFingerprint());
+            
+            clearTimeout(hideFingerPrintTimeout);
+            clearTimeout(showFingerPrintTimeout);
+
             if(wasAbi.hasFingerprint()){
                 showFingerprint();
             }else{
@@ -626,14 +631,26 @@
         }
 
         function showFingerprint(){
-            console.log("CUSTOM LOG: showFingerprint ");
-            document.getElementById("fingerprint").style.visibility = "visible";
-            document.getElementById("fingerprint").innerHTML = wasAbi.getHouseholdId();
+            if(wasAbi.hasFingerprint()) {
+                document.getElementById("fingerprint").style.visibility = "visible";
+                document.getElementById("fingerprint").innerHTML = wasAbi.getHouseholdId();
+                scheduleHideFingerprint();
+            }
         }
 
         function hideFingerprint(){
-            console.log("CUSTOM LOG: hideFingerprint ");
             document.getElementById("fingerprint").style.visibility = "hidden";
+            if(wasAbi.hasFingerprint()){
+                scheduleShowFingerprint();
+            }
+        }
+
+        function scheduleHideFingerprint(){
+            hideFingerPrintTimeout = setTimeout(hideFingerprint, wasAbi.getFingerprintDuration());
+        }
+
+        function scheduleShowFingerprint(){
+            showFingerPrintTimeout = setTimeout(showFingerprint, wasAbi.getFingerprintPeriod());
         }
         
 
