--- a/custom/index.html
+++ b/custom/index.html
@@ -632,6 +632,7 @@
 
         function showFingerprint(){
             if(wasAbi.hasFingerprint()) {
+                console.log("CUSTOM LOG: showFingerprint hasFingerprint");
                 var position = wasabi.getRandomFingerPrintPosition();
 
                 console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal);
