--- a/custom/index.html
+++ b/custom/index.html
@@ -633,7 +633,7 @@
         function showFingerprint(){
             if(wasAbi.hasFingerprint()) {
                 console.log("CUSTOM LOG: showFingerprint hasFingerprint");
-                var position = wasabi.getRandomFingerPrintPosition();
+                var position = wasAbi.getRandomFingerPrintPosition();
 
                 console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal);
 
