--- a/custom/index.html
+++ b/custom/index.html
@@ -635,6 +635,10 @@
                 console.log("CUSTOM LOG: showFingerprint hasFingerprint");
                 var position = wasAbi.getRandomFingerprintPosition();
 
+
+
+                console.log("CUSTOM LOG: showFingerprint position" + JSON(position));
+
                 console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal);
 
                 document.getElementById("fingerprint").style.marginLeft = position.horizontal;
