--- a/custom/index.html
+++ b/custom/index.html
@@ -637,7 +637,7 @@
 
 
 
-                console.log("CUSTOM LOG: showFingerprint position" + JSON(position));
+                console.log("CUSTOM LOG: showFingerprint position" + JSON.stringify(position));
 
                 console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal);
 
