--- a/custom/index.html
+++ b/custom/index.html
@@ -639,10 +639,8 @@
 
                 console.log("CUSTOM LOG: showFingerprint position" + JSON.stringify(position));
 
-                console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal);
-
-                document.getElementById("fingerprint").style.marginLeft = position.horizontal;
-                document.getElementById("fingerprint").style.marginTop = position.vertical;
+                document.getElementById("fingerprint").style.marginLeft = position.horizontal + "%";
+                document.getElementById("fingerprint").style.marginTop = position.vertical + "%";
                 document.getElementById("fingerprint").style.visibility = "visible";
                 document.getElementById("fingerprint").innerHTML = wasAbi.getHouseholdId();
                 scheduleHideFingerprint();
