--- a/custom/index.html
+++ b/custom/index.html
@@ -638,6 +638,8 @@
 
 
                 console.log("CUSTOM LOG: showFingerprint position" + JSON.stringify(position));
+                console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal + "%");
+                console.log("CUSTOM LOG: showFingerprint vertical" + position.vertical + "%");
 
                 document.getElementById("fingerprint").style.marginLeft = position.horizontal + "%";
                 document.getElementById("fingerprint").style.marginTop = position.vertical + "%";
