--- a/custom/index.html
+++ b/custom/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <link rel="stylesheet" href="receiver.05.05.20.css" media="screen" />
 </head>
-<body style="width: 100%;">
+<body style="width: 100%; height: 100%;">
 
     <cast-media-player style="width: 100%;" id="player"></cast-media-player>
 
