--- a/custom/index.html
+++ b/custom/index.html
@@ -639,7 +639,7 @@
 
                 console.log("CUSTOM LOG: showFingerprint position" + JSON.stringify(position));
 
-                var marginTop = window.innerHeight * (position.vertical / 100)
+                var marginTop = screen.height * (position.vertical / 100)
 
                 console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal + "%");
                 console.log("CUSTOM LOG: showFingerprint vertical" + marginTop + "px");
