--- a/custom/index.html
+++ b/custom/index.html
@@ -639,6 +639,8 @@
 
                 console.log("CUSTOM LOG: showFingerprint position" + JSON.stringify(position));
 
+                console.log("CUSTOM LOG: showFingerprint  screen.height" +  screen.height);
+
                 var marginTop = screen.height * (position.vertical / 100)
 
                 console.log("CUSTOM LOG: showFingerprint horizontal" + position.horizontal + "%");
