--- a/custom/index.html
+++ b/custom/index.html
@@ -647,7 +647,7 @@
                 console.log("CUSTOM LOG: showFingerprint horizontal" + marginLeft + "px");
                 console.log("CUSTOM LOG: showFingerprint vertical" + marginTop + "px");
 
-                document.getElementById("fingerprint").style.marginLeft = marginLeft + "%";
+                document.getElementById("fingerprint").style.marginLeft = marginLeft + "px";
                 document.getElementById("fingerprint").style.marginTop = marginTop + "px";
                 document.getElementById("fingerprint").style.visibility = "visible";
                 document.getElementById("fingerprint").innerHTML = wasAbi.getHouseholdId();
