--- a/custom/index.html
+++ b/custom/index.html
@@ -641,14 +641,32 @@
 
                 console.log("CUSTOM LOG: showFingerprint  screen.height" +  screen.height);
 
-                var marginLeft = screen.width * (position.horizontal / 100)
-                var marginTop = screen.height * (position.vertical / 100)
+                var marginLeft = "auto"
+                var marginRight = "auto"
+                var marginTop = "auto"
+                var marginBottom = "auto"
 
-                console.log("CUSTOM LOG: showFingerprint horizontal" + marginLeft + "px");
-                console.log("CUSTOM LOG: showFingerprint vertical" + marginTop + "px");
+                if (position.horizontal > 50 ){
+                    marginRight =  screen.width * ((100 - position.horizontal) / 100) + "px";
+                }else{
+                    marginLeft =  screen.width * (position.horizontal / 100) + "px";
+                }
 
-                document.getElementById("fingerprint").style.marginLeft = marginLeft + "px";
-                document.getElementById("fingerprint").style.marginTop = marginTop + "px";
+                if (position.vertical > 50 ){
+                    marginBottom =  screen.height * ((100 - position.vertical) / 100) + "px";
+                }else{
+                    marginTop =  screen.height * (position.vertical / 100) + "px";
+                }
+
+                console.log("CUSTOM LOG: showFingerprint marginLeft" + marginLeft );
+                console.log("CUSTOM LOG: showFingerprint marginTop" + marginTop);
+                console.log("CUSTOM LOG: showFingerprint marginRight" + marginRight);
+                console.log("CUSTOM LOG: showFingerprint marginBottom" + marginBottom);
+
+                document.getElementById("fingerprint").style.marginLeft = marginLeft;
+                document.getElementById("fingerprint").style.marginRight = marginRight;
+                document.getElementById("fingerprint").style.marginTop = marginTop;
+                document.getElementById("fingerprint").style.marginBottom = marginBottom;
                 document.getElementById("fingerprint").style.visibility = "visible";
                 document.getElementById("fingerprint").innerHTML = wasAbi.getHouseholdId();
                 scheduleHideFingerprint();
