--- a/custom/index.html
+++ b/custom/index.html
@@ -110,7 +110,8 @@
                 }
 
                 sendMessageToSender();
-                adjustPlayAfterLoad()
+                adjustPlayAfterLoad();
+                checkFingerPrint();
                 
             }
         );
@@ -420,7 +421,6 @@
                     break;
                 case "sessionParams":
                     wasAbi.initSessionParams(params);
-                    checkFingerPrint();
                     break;
                 case "requestSessionParams":
                     sendSessionParams();
