--- a/custom/index.html
+++ b/custom/index.html
@@ -645,8 +645,8 @@
                 var playerHeight = screen.height;
                 if (player.length > 0){
                     console.log("CUSTOM LOG: showFingerprint player");
-                    playerWidth = player[0].offsetWidth;
-                    playerHeight = player[0].offsetHeight;
+                    playerWidth = player[0].clientWidth;
+                    playerHeight = player[0].clientHeight;;
                     console.log("CUSTOM LOG: showFingerprint playerHeight " + playerHeight);
                 }
                 
