--- a/custom/index.html
+++ b/custom/index.html
@@ -640,7 +640,7 @@
                 console.log("CUSTOM LOG: showFingerprint position" + JSON.stringify(position));
 
 
-                var player = document.getElementsByTagName("body");
+                //var player = document.getElementsByTagName("body");
                 var playerWidth = screen.width;
                 var playerHeight = screen.height;
                 /*
