--- a/custom/index.html
+++ b/custom/index.html
@@ -660,8 +660,8 @@
                 if (position.horizontal > 50){
                     marginLeft -= fingerprintWith;
                 }
-                if (position.vertical < 50){
-                    console.log("CUSTOM LOG: showFingerprint position.vertical < 50");
+                if (position.vertical > 50){
+                    console.log("CUSTOM LOG: showFingerprint position.vertical > 50");
                     marginTop -= fingerprintHeight;
                     marginTop -= 100;
                 }
