Custom track test 2

--- a/custom/index.html
+++ b/custom/index.html
@@ -100,7 +100,7 @@
                         var track = event.media.tracks[i];
                         track.name = "Mi español";
 
-                        textTracksManager.addTracks(track);
+                        textTracksManager.addTracks([track]);
                     }
 
                 }
