Custom track test 4

--- a/custom/index.html
+++ b/custom/index.html
@@ -101,6 +101,7 @@
                 for (var i = 0; i < tracks.length; i++) {
                     
                     if (tracks[i].type == "AUDIO"){
+                        console.log("on PLAYER_LOAD_COMPLETE: My language ");
                         tracks[i].name = "My language"
                     }
 
