Custom track test 5

--- a/custom/index.html
+++ b/custom/index.html
@@ -106,7 +106,7 @@
                     }
 
                 }
-                textTracksManager.addTracks(tracks);
+                //textTracksManager.addTracks(tracks);
 
                 setDefaultLanguage(event.media.tracks);
                 setDefaultSubtitles(event.media.tracks);
