--- a/custom/index.html
+++ b/custom/index.html
@@ -100,7 +100,7 @@
                 var tracks = textTracksManager.getTracks()
                 for (var i = 0; i < tracks.length; i++) {
                     
-                    if (tracks[i].type == "AUDIO" && tracks[i].language == "spa"){
+                    if (tracks[i].type == "TEXT" && tracks[i].language == "spa"){
                         console.log("on PLAYER_LOAD_COMPLETE: My language");
                         tracks[i].name = "My Spanish";
                     }
