Custom track test 9

--- a/custom/index.html
+++ b/custom/index.html
@@ -101,7 +101,7 @@
                 var tracks = textTracksManager.getTracks()
                 
                 for (var i = 0; i < tracks.length; i++) {
-                    tracks[i].name = wasAbi.getLanguageLabel(tracks[i].name);
+                    tracks[i].name = wasAbi.getLanguageLabel(tracks[i].language);
 
                     /*
                     if (tracks[i].type == "TEXT" && tracks[i].language == "spa"){
