Divide mark position and session manager intervals in two timer

--- a/custom/index.html
+++ b/custom/index.html
@@ -507,7 +507,7 @@
             if (!wasAbi.isPlayingLive() && !wasAbi.isPlayingTrailer()){
                 //execute first time now
                 updateMarkPosition();
-                markPositionTimer = setInterval(updateMarkPosition, wasAbi.getSessionManagerInterval());
+                markPositionTimer = setInterval(updateMarkPosition, wasAbi.getMarkPositionInterval());
             }
         }
 
