--- a/custom/index.html
+++ b/custom/index.html
@@ -437,7 +437,7 @@
 
 
         options.playbackConfig = playbackConfig;
-        context.start(options);
+        //context.start(options);
 
         console.log("CUSTOM LOG:context started");
 
@@ -705,7 +705,7 @@
                 playerElement.style.setProperty('--slideshow-image-2', 'url(' + params.slideshow_2 + ')');
             }
 
-            context.start()
+            context.start(options)
         }
         
 
