--- a/custom/index.html
+++ b/custom/index.html
@@ -705,7 +705,7 @@
                 playerElement.style.setProperty('--slideshow-image-2', 'url(' + params.slideshow_2 + ')');
             }
 
-            context.start(options)
+            context.start(playbackConfig)
         }
         
 
