--- a/custom/index.html
+++ b/custom/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <link rel="stylesheet" href="receiver.29.05.20.css" media="screen" />
+    <link rel="stylesheet" href="receiver1.29.05.20.css" media="screen" />
 </head>
 <body style="width: 100%; height: 100%;">
 
