--- a/custom/dev/index.html
+++ b/custom/dev/index.html
@@ -14,6 +14,6 @@
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
     <script type="text/javascript" src="lang.js"> </script>
-    <script type="text/javascript" src="om_receiver.2020.09.28.min.js"> </script>
+    <script type="text/javascript" src="om.receiver.min.js"> </script>
 </body>
 </html>
