--- a/custom/dev/index.html
+++ b/custom/dev/index.html
@@ -15,6 +15,6 @@
     <script type="text/javascript" src="receiver2.5.8.js"> </script>
     <script type="text/javascript" src="lang.js"> </script>
     <!--<script type="text/javascript" src="om_receiver.2020.09.28.min.js"> </script>-->
-    <script type="text/javascript" src="receiver_uglify.js"> </script>
+    <script type="text/javascript" src="om.receiver.min.js"> </script>
 </body>
 </html>
