--- a/custom/dev/index_prod.html
+++ b/custom/dev/index_prod.html
@@ -14,7 +14,6 @@
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
     <script type="text/javascript" src="js/receiver2.5.8.js"> </script>
     <script type="text/javascript" src="js/lang.js"> </script>
-    <script type="text/javascript" src="js/WasABI.js"> </script>
-    <script type="text/javascript" src="js/om.receiver.js"> </script>
+    <script type="text/javascript" src="dist/om.receiver.min.js"> </script>
 </body>
 </html>
