--- a/custom/dev/index.html
+++ b/custom/dev/index.html
@@ -12,9 +12,9 @@
     <div id="fingerprint"></div>
 
     <!--<script type="text/javascript" src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"> </script>-->
-    <script type="text/javascript" src="receiver2.5.8.js"> </script>
-    <script type="text/javascript" src="lang.js"> </script>
-    <script type="text/javascript" src="WasABI.js"> </script>
-    <script type="text/javascript" src="om.receiver.js"> </script>
+    <script type="text/javascript" src="js/receiver2.5.8.js"> </script>
+    <script type="text/javascript" src="js/lang.js"> </script>
+    <script type="text/javascript" src="js/WasABI.js"> </script>
+    <script type="text/javascript" src="js/om.receiver.js"> </script>
 </body>
 </html>
